tests/errors/syn.expected-ident-or-open-brace.post-dot.or
main :: () -> void {
    x := int.6;
    x;
};
